--- a/scheduler-pod.yaml
+++ b/scheduler-pod.yaml
@@ -1,21 +1,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: d3m-example-pod
+  name: d3m-pmlb-scheduler-pod
 spec:
   restartPolicy: Never
   containers:
-  - name: d3m-example
-    image: registry.datadrivendiscovery.org/d3m/d3m-summer2018-run-example:D3M_Your_Team_Image_Name
+  - name: d3m-sklearn-pmlb-benchmarks
+    image: registry.datadrivendiscovery.org/d3m/d3m-summer2018-run-example:D3M_sklearn-pmlb-benchmarks
     env:
-    - name: D3MRUN
-      value: "search"
     - name: D3MINPUTDIR
       value: "/input"
     - name: D3MOUTPUTDIR
       value: "/output"
-    - name: D3MTESTOPT
-      value: "/output/bestfit.py"
+    - name: D3MTYPE
+      value: "scheduler"
     - name: D3MCPU
       value: "1"
     - name: D3MRAM
@@ -23,9 +21,6 @@ spec:
     - name: D3MTIMEOUT
       value: "10"
     volumeMounts:
-      - name: input-data
-        mountPath: /input
-        readOnly: true
       - name: output-data
         mountPath: /output
         readOnly: false
@@ -36,10 +31,6 @@ spec:
   imagePullSecrets:
   - name: regcred
   volumes:
-  - name: input-data
-    hostPath:
-      path: /opt/datasets/seed_datasets_current/185_baseball
-      type: Directory
   - name: output-data
     persistentVolumeClaim:
       claimName: eval-output-pv-claim
