--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ build_image:
 
   script:
     - docker login -u gitlab-ci-token -p "$CI_BUILD_TOKEN" $CI_REGISTRY
-    - docker build -t "$CI_REGISTRY_IMAGE:D3M_sklearn-pmlb-benchmarks" -f Dockerfile .
-    - docker push "$CI_REGISTRY_IMAGE:D3M_sklearn-pmlb-benchmarks"
+    - docker build -t "$CI_REGISTRY_IMAGE" -f Dockerfile .
+    - docker push "$CI_REGISTRY_IMAGE"
 
   only:
     - master
